...
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MyNetflix.PopupOverlay" />

            <ImageView
                android:id="@+id/image_poster_detail"
                android:layout_width="330dp"
                android:layout_height="230dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/foto_untuk_movie_detail"
                tools:src="@tools:sample/avatars" />
...
            android:id="@+id/movie_detail"
            layout="@layout/content_detail_movie" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/love_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/floating_action_button_love"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="top|end"
...
